#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(cpp-practise, 1.0, wxthon@gmail.com)
AM_INIT_AUTOMAKE(cpp-practise, 2.69)
#AC_CONFIG_SRCDIR([exception_main.cc])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile)
